--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,6 +1,7 @@
 .allProjects {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -9,11 +10,4 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
-
-@media (max-width: 800px) {
-  .allProjects {
-    flex-direction: column;
-    align-items: center;
-  }
 }
