--- a/src/Components/Skills/Skill/Skill.css
+++ b/src/Components/Skills/Skill/Skill.css
@@ -17,7 +17,7 @@
   max-width: 200px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 820px) {
   .CircleCard {
     height: 280px;
     width: 280px;
